Use content bounds size for ink drop highlight

The new tab button ink drop needed a larger size than the default
and overriding to pass bounds size corrected a rendering artifact
on the highlight.

Bug: 853700
Change-Id: Iff98f43049df3fa0c7142c3213707f423b6b1c14
Reviewed-on: https://chromium-review.googlesource.com/1105487
Commit-Queue: Orin Jaworski <orinj@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568520}
Former-commit-id: 651b61fdd2ae4c4973a110364faa3443c8b2951c